[gd_scene load_steps=30 format=2]

[ext_resource path="res://ui/theme.tres" type="Theme" id=1]
[ext_resource path="res://start_menu/vehicle_list.gd" type="Script" id=2]
[ext_resource path="res://settings/settings_blur.tscn" type="PackedScene" id=3]
[ext_resource path="res://start_menu/vehicle_info.gd" type="Script" id=4]
[ext_resource path="res://start_menu/vehicle_preview.gd" type="Script" id=5]
[ext_resource path="res://start_menu/floor_mirror.gd" type="Script" id=6]
[ext_resource path="res://start_menu/new_vehicle.gd" type="Script" id=7]
[ext_resource path="res://start_menu/main.gd" type="Script" id=8]
[ext_resource path="res://start_menu/server/lobby.tscn" type="PackedScene" id=9]
[ext_resource path="res://start_menu/server/direct.tscn" type="PackedScene" id=10]
[ext_resource path="res://start_menu/electro_waiting_room.ogg" type="AudioStream" id=11]
[ext_resource path="res://ui/font_big.tres" type="DynamicFont" id=13]
[ext_resource path="res://start_menu/shortcut_main_menu_battle.tres" type="ShortCut" id=14]
[ext_resource path="res://start_menu/shortcut_main_menu_settings.tres" type="ShortCut" id=15]
[ext_resource path="res://start_menu/shortcut_main_menu_edit.tres" type="ShortCut" id=16]
[ext_resource path="res://start_menu/shortcut_main_menu_create.tres" type="ShortCut" id=17]
[ext_resource path="res://start_menu/server/host.tscn" type="PackedScene" id=18]
[ext_resource path="res://ui/font_big_title.tres" type="DynamicFont" id=26]
[ext_resource path="res://start_menu/vehicle_list_item.tscn" type="PackedScene" id=27]
[ext_resource path="res://settings/applier.gd" type="Script" id=28]
[ext_resource path="res://start_menu/credits.tscn" type="PackedScene" id=30]

[sub_resource type="Environment" id=1]
ambient_light_color = Color( 1, 1, 1, 1 )
ambient_light_energy = 0.1
tonemap_mode = 2
ss_reflections_max_steps = 256
ss_reflections_fade_out = 0.0358969
ss_reflections_roughness = false

[sub_resource type="HeightMapShape" id=2]
margin = 0.001
map_width = 21
map_depth = 21
map_data = PoolRealArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 )

[sub_resource type="ViewportTexture" id=3]

[sub_resource type="SpatialMaterial" id=4]
albedo_texture = SubResource( 3 )
metallic = 0.57
metallic_specular = 0.7
roughness = 0.39

[sub_resource type="PlaneMesh" id=5]
size = Vector2( 20, 20 )

[sub_resource type="SpatialMaterial" id=6]
params_cull_mode = 1

[sub_resource type="CubeMesh" id=7]
size = Vector3( 20, 20.1, 20 )

[sub_resource type="Environment" id=8]
fog_enabled = true
fog_color = Color( 1, 1, 1, 1 )
fog_depth_end = 50.0
fog_depth_curve = 1.27456

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
theme = ExtResource( 1 )
script = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Vehicle preview" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
camera_zoom_min = 2.0
camera_zoom_max = 10.0

[node name="InputTimer" type="Timer" parent="Vehicle preview"]
wait_time = 20.0
one_shot = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="Vehicle preview"]
environment = SubResource( 1 )

[node name="Origin" type="Spatial" parent="Vehicle preview"]

[node name="CameraOrigin" type="Spatial" parent="Vehicle preview"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="Camera" type="Camera" parent="Vehicle preview"]
transform = Transform( 1, 0, 0, 0, 0.808962, 0.587862, 0, -0.587862, 0.808962, -3.19289, 5, 7.26596 )
current = true

[node name="Room" type="StaticBody" parent="Vehicle preview"]

[node name="CollisionShape" type="CollisionShape" parent="Vehicle preview/Room"]
shape = SubResource( 2 )

[node name="Floor" type="MeshInstance" parent="Vehicle preview/Room"]
process_priority = 1
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.00875664, -3.57628e-07, 0.0065856 )
layers = 1024
material_override = SubResource( 4 )
mesh = SubResource( 5 )
material/0 = null
script = ExtResource( 6 )

[node name="Walls" type="MeshInstance" parent="Vehicle preview/Room"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 0 )
material_override = SubResource( 6 )
mesh = SubResource( 7 )
material/0 = null

[node name="Viewport" type="Viewport" parent="Vehicle preview/Room"]
size = Vector2( 2048, 2048 )
msaa = 2
keep_3d_linear = true
gui_disable_input = true
gui_snap_controls_to_pixels = false

[node name="Camera" type="Camera" parent="Vehicle preview/Room/Viewport"]
transform = Transform( 0, 1, 0, 0, 0, -1, -1, 0, 0, -3.19289, -5, 7.26596 )
keep_aspect = 0
cull_mask = 1
environment = SubResource( 8 )
projection = 2
size = 20.0
frustum_offset = Vector2( 7.26596, 3.19289 )
near = 5.0

[node name="-XY" type="SpotLight" parent="Vehicle preview"]
transform = Transform( 0.707107, 0.5, -0.5, 0, 0.707107, 0.707107, 0.707107, -0.5, 0.5, -9.8995, 20, 9.89949 )
light_energy = 0.5
spot_range = 106.0

[node name="XY" type="SpotLight" parent="Vehicle preview"]
transform = Transform( 0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 9.8995, 20, 9.8995 )
light_energy = 0.3
spot_range = 106.0

[node name="X-Y" type="SpotLight" parent="Vehicle preview"]
transform = Transform( -0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, 0.5, -0.5, 9.8995, 20, -9.8995 )
light_energy = 0.3
spot_range = 106.0

[node name="-X-Y" type="SpotLight" parent="Vehicle preview"]
transform = Transform( -0.707107, 0.5, -0.5, 0, 0.707107, 0.707107, 0.707107, 0.5, -0.5, -9.8995, 20, -9.8995 )
light_energy = 0.3
spot_range = 106.0

[node name="Vehicle list" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -160.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
card_template = ExtResource( 27 )

[node name="Box" type="ScrollContainer" parent="Vehicle list"]
anchor_right = 1.0
margin_top = 10.0
margin_bottom = 140.0
size_flags_vertical = 0
follow_focus = true
scroll_vertical_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Box" type="HBoxContainer" parent="Vehicle list/Box"]
margin_right = 1920.0
margin_bottom = 130.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="New vehicle" type="PanelContainer" parent="."]
visible = false
anchor_left = 0.3
anchor_top = 0.5
anchor_right = 0.7
anchor_bottom = 0.5
margin_left = 4.0
margin_top = -64.0
margin_right = 4.0
margin_bottom = 64.0
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Box" type="VBoxContainer" parent="New vehicle"]
margin_left = 4.0
margin_top = 4.0
margin_right = 764.0
margin_bottom = 124.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Title" type="Label" parent="New vehicle/Box"]
margin_right = 760.0
margin_bottom = 21.0
text = "Create vehicle"
align = 1

[node name="Name" type="LineEdit" parent="New vehicle/Box"]
margin_top = 31.0
margin_right = 760.0
margin_bottom = 81.0
rect_min_size = Vector2( 0, 50 )
focus_neighbour_left = NodePath("../Create")
focus_neighbour_top = NodePath("../Create")
focus_neighbour_right = NodePath("../Create")
focus_neighbour_bottom = NodePath("../Create")
focus_next = NodePath("../Create")
focus_previous = NodePath("../Create")
size_flags_vertical = 5
align = 1
placeholder_text = "Name"

[node name="Create" type="Button" parent="New vehicle/Box"]
margin_top = 91.0
margin_right = 760.0
margin_bottom = 120.0
focus_neighbour_left = NodePath("../Name")
focus_neighbour_top = NodePath("../Name")
focus_neighbour_right = NodePath("../Name")
focus_neighbour_bottom = NodePath("../Name")
focus_next = NodePath("../Name")
focus_previous = NodePath("../Name")
text = "Create"

[node name="QuickActions" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="HBoxContainer" parent="QuickActions"]
margin_right = 765.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 0
alignment = 2

[node name="Exit" type="Button" parent="QuickActions/Left"]
margin_left = 511.0
margin_right = 564.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 13 )
text = "Exit"

[node name="Credits" type="Button" parent="QuickActions/Left"]
margin_left = 568.0
margin_right = 657.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 13 )
text = "Credits"

[node name="Settings" type="Button" parent="QuickActions/Left"]
margin_left = 661.0
margin_right = 765.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 13 )
shortcut = ExtResource( 15 )
text = "Settings"

[node name="Middle" type="HBoxContainer" parent="QuickActions"]
margin_left = 775.0
margin_right = 1104.0
margin_bottom = 47.0
size_flags_vertical = 0
custom_constants/separation = 8
alignment = 1

[node name="Host" type="Button" parent="QuickActions/Middle"]
margin_right = 88.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 26 )
shortcut = ExtResource( 14 )
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lobby" type="Button" parent="QuickActions/Middle"]
margin_left = 96.0
margin_right = 209.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 26 )
shortcut = ExtResource( 14 )
text = "Lobby"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Direct" type="Button" parent="QuickActions/Middle"]
margin_left = 217.0
margin_right = 329.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 26 )
shortcut = ExtResource( 14 )
text = "Direct"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="HBoxContainer" parent="QuickActions"]
margin_left = 1114.0
margin_right = 1880.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="Edit" type="Button" parent="QuickActions/Right"]
margin_right = 53.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 13 )
shortcut = ExtResource( 16 )
text = "Edit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Create" type="Button" parent="QuickActions/Right"]
margin_left = 57.0
margin_right = 141.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 13 )
shortcut = ExtResource( 17 )
text = "Create"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vehicle info" type="PanelContainer" parent="."]
anchor_left = 0.8
anchor_right = 1.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = 163.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
_gui_name = NodePath("../Vehicle info/Box/Name")
_gui_cost = NodePath("../Vehicle info/Box/Box/Cost value")
_gui_blocks = NodePath("../Vehicle info/Box/Box/Blocks value")
_gui_mass = NodePath("../Vehicle info/Box/Box/Mass value")
_gui_size = NodePath("../Vehicle info/Box/Box/Size value")

[node name="Box" type="VBoxContainer" parent="Vehicle info"]
margin_left = 4.0
margin_top = 4.0
margin_right = 360.0
margin_bottom = 139.0
size_flags_horizontal = 3
size_flags_vertical = 9

[node name="Name" type="LineEdit" parent="Vehicle info/Box"]
margin_right = 356.0
margin_bottom = 29.0
placeholder_text = "Name"
caret_blink = true

[node name="Box" type="GridContainer" parent="Vehicle info/Box"]
margin_top = 39.0
margin_right = 356.0
margin_bottom = 135.0
size_flags_horizontal = 3
size_flags_vertical = 9
columns = 2

[node name="Cost name" type="Label" parent="Vehicle info/Box/Box"]
margin_right = 176.0
margin_bottom = 21.0
size_flags_horizontal = 3
text = "Cost"

[node name="Cost value" type="Label" parent="Vehicle info/Box/Box"]
margin_left = 180.0
margin_right = 356.0
margin_bottom = 21.0
size_flags_horizontal = 3

[node name="Blocks name" type="Label" parent="Vehicle info/Box/Box"]
margin_top = 25.0
margin_right = 176.0
margin_bottom = 46.0
size_flags_horizontal = 3
text = "Blocks"

[node name="Blocks value" type="Label" parent="Vehicle info/Box/Box"]
margin_left = 180.0
margin_top = 25.0
margin_right = 356.0
margin_bottom = 46.0
size_flags_horizontal = 3

[node name="Mass name" type="Label" parent="Vehicle info/Box/Box"]
margin_top = 50.0
margin_right = 176.0
margin_bottom = 71.0
size_flags_horizontal = 3
text = "Mass"

[node name="Mass value" type="Label" parent="Vehicle info/Box/Box"]
margin_left = 180.0
margin_top = 50.0
margin_right = 356.0
margin_bottom = 71.0
size_flags_horizontal = 3

[node name="Size name" type="Label" parent="Vehicle info/Box/Box"]
margin_top = 75.0
margin_right = 176.0
margin_bottom = 96.0
size_flags_horizontal = 3
text = "Size"

[node name="Size value" type="Label" parent="Vehicle info/Box/Box"]
margin_left = 180.0
margin_top = 75.0
margin_right = 356.0
margin_bottom = 96.0
size_flags_horizontal = 3

[node name="Host" parent="." instance=ExtResource( 18 )]
visible = false

[node name="Lobby" parent="." instance=ExtResource( 9 )]
visible = false

[node name="Direct" parent="." instance=ExtResource( 10 )]
visible = false

[node name="Settings" parent="." instance=ExtResource( 3 )]
visible = false

[node name="Darken background" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.254902 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" parent="." instance=ExtResource( 30 )]
visible = false

[node name="OwnWar_Settings_Applier" type="Node" parent="."]
script = ExtResource( 28 )
environment = NodePath("../Vehicle preview/WorldEnvironment")

[node name="Waiting room music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -10.0
autoplay = true
bus = "Music"

[connection signal="vehicle_renamed" from="." to="Vehicle list" method="on_vehicle_renamed"]
[connection signal="vehicle_renamed" from="." to="Vehicle info" method="on_vehicle_renamed"]
[connection signal="timeout" from="Vehicle preview/InputTimer" to="Vehicle preview" method="input_timeout"]
[connection signal="select_vehicle" from="Vehicle list" to="." method="select_vehicle"]
[connection signal="select_vehicle" from="Vehicle list" to="Vehicle preview" method="set_preview"]
[connection signal="focus_exited" from="New vehicle/Box/Name" to="New vehicle" method="focus_lost"]
[connection signal="gui_input" from="New vehicle/Box/Name" to="New vehicle" method="name_gui_input"]
[connection signal="text_changed" from="New vehicle/Box/Name" to="New vehicle" method="on_name_changed"]
[connection signal="text_entered" from="New vehicle/Box/Name" to="New vehicle" method="goto_editor"]
[connection signal="focus_exited" from="New vehicle/Box/Create" to="New vehicle" method="focus_lost"]
[connection signal="pressed" from="New vehicle/Box/Create" to="New vehicle" method="goto_editor"]
[connection signal="pressed" from="QuickActions/Left/Exit" to="." method="exit_game"]
[connection signal="pressed" from="QuickActions/Left/Credits" to="Credits" method="set_visible" binds= [ true ]]
[connection signal="pressed" from="QuickActions/Left/Settings" to="Settings" method="set_visible" binds= [ true ]]
[connection signal="pressed" from="QuickActions/Middle/Host" to="Host" method="set_visible" binds= [ true ]]
[connection signal="pressed" from="QuickActions/Middle/Lobby" to="Lobby" method="set_visible" binds= [ true ]]
[connection signal="pressed" from="QuickActions/Middle/Direct" to="Direct" method="set_visible" binds= [ true ]]
[connection signal="pressed" from="QuickActions/Right/Edit" to="." method="goto_editor"]
[connection signal="pressed" from="QuickActions/Right/Create" to="New vehicle" method="activate"]
[connection signal="focus_exited" from="Vehicle info/Box/Name" to="Vehicle info" method="edit_name"]
[connection signal="text_entered" from="Vehicle info/Box/Name" to="Vehicle info" method="edit_name"]
